# gtd-cli

./: alembic.ini  gtd.db  pyproject.toml  requirements-dev.txt  requirements.txt
gtd_cli/: config.py  exceptions.py
gtd_cli/cli/: commands.py  prompts.py
gtd_cli/db/: base.py
gtd_cli/db/models/: __init__.py  area.py  context.py  item.py  project.py
gtd_cli/services/: base.py  item.py
migrations/: env.py
migrations/versions/: 479e2be96d9c_initial_migration.py
tests/: conftest.py
