[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtd-cli"
version = "0.1.0"
description = "A CLI tool for Getting Things Done (GTD)"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
gtd = "gtd_cli.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["gtd_cli"]
